traversal.zigzag.traversalzigzag.TraversalZigZag.scala.error
Compilation error:
TraversalZigZag:6: error: Boolean does not take parameters
  while (finalpos() == false){
                 ^TraversalZigZag:14: error: not found: value Direction
        if (getDirection()==Direction.EAST){
                            ^TraversalZigZag:28: error: not found: value Direction
      if (getDirection()==Direction.EAST){
                          ^